syntax = "proto3";

option go_package = "grpc/sup-broker";

package supbroker;

// Servicio del Broker para comunicación con Supervisores Hexgate
service BrokerService {
    // Procesa solicitudes de Supervisores Hexgate (CRUD y validación de Read Your Writes)
    rpc ProcessRequest(SupervisorRequest) returns (ServerResponse);
}

// Solicitudes enviadas por Supervisores al Broker
message SupervisorRequest {
    string region = 1;            // Nombre de la región (ej. Noxus)
    string product_name = 2;      // Nombre del producto (ej. Vino)
    OperationType operation_type = 3; // Tipo de operación: AGREGAR, RENOMBRAR, ACTUALIZAR, BORRAR
    optional int32 value = 4;              // Valor opcional (cantidad) para agregar o actualizar
    optional string new_product_name = 5; // Nuevo nombre opcional en caso de renombrar
    optional VectorClock known_vector_clock = 6;   // Reloj vectorial conocido por el Supervisor
}

// Respuesta del Broker hacia los Supervisores
message ServerResponse {
    ResponseStatus status = 1;    // Estado de la operación (OK o ERROR)
    VectorClock vector_clock = 2; // Reloj vectorial asociado al registro procesado
    optional int32 value = 3;              // Valor del producto procesado (si corresponde)
    optional string message = 4;           // Mensaje opcional en caso de error
}

// Tipos de operación permitidos
enum OperationType {
    AGREGAR = 0;
    RENOMBRAR = 1;
    ACTUALIZAR = 2;
    BORRAR = 3;
}

// Estado de la respuesta
enum ResponseStatus {
    OK = 0;
    ERROR = 1;
}

// Representación del reloj vectorial
message VectorClock {
    int32 server1 = 1; // Contador de cambios en Servidor Hextech 1
    int32 server2 = 2; // Contador de cambios en Servidor Hextech 2
    int32 server3 = 3; // Contador de cambios en Servidor Hextech 3
}
